--- a/index.html
+++ b/index.html
@@ -953,9 +953,9 @@
           <div>
             <h3 class="text-xl font-semibold mb-4">Contact Us</h3>
             <p class="text-gray-300">Obomeng Traditional Council</p>
-            <p class="text-gray-300">P.O. Box 123, Obomeng, Kwahu</p>
-            <p class="text-gray-300">Email: info@obomeng.com</p>
-            <p class="text-gray-300">Phone: +233 123 456789</p>
+            <p class="text-gray-300">P.O. Box 475, Obomeng, Kwahu</p>
+            <p class="text-gray-300">Email: obomengpalace@gmail.com</p>
+            <p class="text-gray-300">Phone: +233 243746530</p>
           </div>
           <div>
             <h3 class="text-xl font-semibold mb-4">Map of Obomeng</h3>
